[gd_scene load_steps=6 format=3 uid="uid://15nf77pg74je"]

[ext_resource type="Script" uid="uid://khnnj5yj007b" path="res://Player/Boom/boom_ui.gd" id="1_3tjyc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3tjyc"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3tjyc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o1457"]
bg_color = Color(0.84956, 1.99743e-06, 3.85046e-07, 1)

[sub_resource type="LabelSettings" id="LabelSettings_3tjyc"]

[node name="BoomUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3tjyc")

[node name="AmmoCount" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -72.0
offset_top = -63.0
offset_right = -13.0
offset_bottom = -13.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxFlat_3tjyc")
text = " 10 "
horizontal_alignment = 1
vertical_alignment = 1

[node name="CooldownBar" type="ProgressBar" parent="."]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -93.0
offset_top = -63.0
offset_right = -85.0
offset_bottom = -13.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxEmpty_3tjyc")
theme_override_styles/fill = SubResource("StyleBoxFlat_o1457")
fill_mode = 3
show_percentage = false

[node name="DashCount" type="Label" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 297.0
offset_right = 72.0
offset_bottom = 320.0
text = "2"
label_settings = SubResource("LabelSettings_3tjyc")
